# src/routes/oauth2.js
@@ -5,6 +5,14 @@ const { auth, requiresAuth } = require('express-openid-connect');
 
 // Gets the user's profile
 router.get('/', requiresAuth(), (req, res) => {
+  /*
+    #swagger.summary = 'Get user profile'
+    #swagger.description = 'Returns user profile'
+    #swagger.tags = ['Users']
+    #swagger.security = [{
+        "OAuth2": ["read"]
+    }]
+  */
   res.send(JSON.stringify(req.oidc.user));
 });
 
